--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.4.5",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
